<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="Pax">No. of Pax</string>
    <string name="Discount">Discount(%)</string>
    <string name="nosvs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="nogst">No GST</string>
    <string name="reset">Reset</string>
    <string name="split">Split</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="space">  </string>
</resources>